Criando tela de Preferências

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -197,25 +197,20 @@
             <ul>
                 <li>
                     <div class="item-content">
-                        <div class="item-media"><i class="icon icon-form-settings"></i></div>
                         <div class="item-inner">
                             <div class="item-title label">Distância</div>
                             <div class="item-input">
                                 <div class="range-slider">
-                                    <input type="range" min="0" max="100" value="50" step="0.1">
+                                    <input type="range" min="0" max="100" value="50" step="0.5">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </li>
-            </ul>
-        </div>
-        <div class="content-block-title">Custom date format</div>
-        <div class="list-block">
-            <ul>
                 <li>
                     <div class="item-content">
                         <div class="item-inner">
+                          <div class="item-title label">Data Final</div>
                             <div class="item-input">
                                 <input type="text" placeholder="Selecionar Data" readonly id="usuPreferenciasData">
                             </div>
@@ -223,6 +218,7 @@
                     </div>
                 </li>
             </ul>
+
         </div>
 
     </div>
