--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="item-link item-content">
+                    <a href="views/oferta/novaOferta.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Ofertas</div>
@@ -210,7 +210,7 @@
                 <li>
                     <div class="item-content">
                         <div class="item-inner">
-                          <div class="item-title label">Data Final</div>
+                            <div class="item-title label">Data Final</div>
                             <div class="item-input">
                                 <input type="text" placeholder="Selecionar Data" readonly id="usuPreferenciasData">
                             </div>
@@ -260,6 +260,9 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 
     <script type="text/javascript" src="js/Modelos.js"></script>
+    <!-- JSON Estados e Cidades-->
+    <script type="text/javascript" src="js/usuario/uf.js"></script>
+    <script type="text/javascript" src="js/oferta/itens.js"></script>
 
     <!-- Configurações do F7 -->
     <script type="text/javascript" src="js/my-app.js"></script>
@@ -268,10 +271,13 @@
     <script type="text/javascript" src="js/usuario/usuarioController.js"></script>
     <script type="text/javascript" src="js/usuario/autenticacao.js"></script>
     <script type="text/javascript" src="js/localizacao.js"></script>
+
+
+    <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
+
     <script type="text/javascript" src="js/notificacoes.js"></script>
     <script type="text/javascript" src="js/my-script.js"></script>
-    <!-- JSON Estados e Cidades-->
-    <script type="text/javascript" src="js/usuario/uf.js"></script>
+
     <script type="text/javascript" src="js/usuario/usuario.js"></script>
     <script type="text/javascript" src="js/usuario/preferencias.js"></script>
 
