Transformado Localizacao.js em classe, resolvido diversos bugs na classe Localizacao, mostrando mapa na oferta, usuario ainda nao migrada para o novo tipo de localizacao

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -270,7 +270,7 @@
     <script type="text/javascript" src="js/configuracoes.js"></script>
     <script type="text/javascript" src="js/usuario/usuarioController.js"></script>
     <script type="text/javascript" src="js/usuario/autenticacao.js"></script>
-    <script type="text/javascript" src="js/localizacao.js"></script>
+    <script type="text/javascript" src="js/Localizacao.js"></script>
 
 
     <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
