--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -42,7 +42,7 @@
         <div class="list-block">
             <ul>
                 <li>
-                    <a href="index.html" class="item-link item-content">
+                    <a href="index.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-home" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Início</div>
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="item-link item-content">
+                    <a href="#" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Reservas</div>
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="item-link item-content open-popup">
+                    <a href="views/usuario/preferencias.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-cog" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Preferências</div>
@@ -87,7 +87,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" id="btnSair" class="item-link item-content open-login-screen">
+                    <a href="#" id="btnSair" class="item-link item-content open-login-screen close-panel">
                         <div class="item-media"><i class="fa fa-power-off" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Sair</div>
@@ -170,128 +170,65 @@
         </div>
     </div>
 
-    <!-- Tela de Preferências -->
-    <div class="popup popup-about">
-        <div class="toolbar">
-            <div class="toolbar-inner">
-                <div class="left">
-                    <a href="#" class="link close-popup">
-                        <i class="icon icon-back"></i>
-                        <span>Voltar</span>
-                    </a>
-                </div>
-                <div class="center">Preferências</div>
-                <div class="right">
-                    <a href="#" class="link" id="usuSalvarPreferencias">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <span>Salvar</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="content-block">
-        </div>
-
-        <form id="usuPreferenciasForm" class="list-block">
-            <div class="content-block-title color-blue"><i class="fa fa-map-marker" aria-hidden="true"></i> Distância de busca</div>
-            <div class="list-block">
-                <ul>
-                    <li>
-                        <div class="item-content">
-                            <div class="item-inner text-center">
-                                <div class="item-title label color-gray" id="distancia"></div>
-                                <div class="item-input">
-                                    <div class="range-slider">
-                                        <input type="range" min="0.5" max="100" value="15" step="0.5" name="usuPreferenciasDistancia" id="usuPreferenciasDistancia">
-                                    </div>
-                                </div>
-                            </div>
+    <!-- Tela de Login add modal-in-->
+    <div class="login-screen" id="loginScreen">
+        <!-- Default view-page layout -->
+        <div class="view">
+            <div class="page">
+                <!-- page-content has additional login-screen content -->
+                <div class="page-content login-screen-content bg-lightblue">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="login-screen-title color-white animated fadeInDownBig">HortApp</div>
                         </div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="content-block-title color-blue"><i class="fa fa-calendar" aria-hidden="true"></i> Data Final</div>
-            <div class="list-block">
-                <ul>
-                    <li>
-                        <li>
-                            <div class="item-content">
-                                <div class="item-inner">
-                                    <div class="item-input">
-                                        <input type="text" placeholder="Selecionar Data" name="usuPreferenciasData" readonly id="usuPreferenciasData">
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="content-block-title color-blue"><i class="fa fa-list" aria-hidden="true"></i> Itens</div>
-
-        </form>
-
-
-        <!-- Tela de Login add modal-in-->
-        <div class="login-screen" id="loginScreen">
-            <!-- Default view-page layout -->
-            <div class="view">
-                <div class="page">
-                    <!-- page-content has additional login-screen content -->
-                    <div class="page-content login-screen-content bg-lightblue">
-                        <div class="row">
-                            <div class="col-auto">
-                                <div class="login-screen-title color-white animated fadeInDownBig">HortApp</div>
-                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-5"></div>
+                        <div class="col-90 animated zoomIn" id="logoLogin">
+                            <img src="img/logo/LogoBranco-F7.png" alt="Logo HortApp" id="imagem" />
                         </div>
-                        <div class="row">
-                            <div class="col-5"></div>
-                            <div class="col-90 animated zoomIn" id="logoLogin">
-                                <img src="img/logo/LogoBranco-F7.png" alt="Logo HortApp" id="imagem" />
-                            </div>
-                            <div class="col-5"></div>
-                        </div>
-                        <div class="row content-block">
-                            <div class="col-100">
-                                <a href="#" id="btnLogin" class="button button-big button-fill color-red animated fadeInUpBig"><i class="fa fa-google" aria-hidden="true"></i>&nbspLogin com Google</a> </div>
-                        </div>
+                        <div class="col-5"></div>
+                    </div>
+                    <div class="row content-block">
+                        <div class="col-100">
+                            <a href="#" id="btnLogin" class="button button-big button-fill color-red animated fadeInUpBig"><i class="fa fa-google" aria-hidden="true"></i>&nbspLogin com Google</a> </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
 
-        <script type="text/javascript" src="cordova.js"></script>
-        <!-- Path to Framework7 Library JS-->
-        <script type="text/javascript" src="bower_components/Framework7/dist/js/framework7.min.js"></script>
-        <!-- JQuery-->
-        <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <!-- Path to Framework7 Library JS-->
+    <script type="text/javascript" src="bower_components/Framework7/dist/js/framework7.min.js"></script>
+    <!-- JQuery-->
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 
-        <script type="text/javascript" src="js/Modelos.js"></script>
-        <!-- JSON Estados e Cidades-->
-        <script type="text/javascript" src="js/usuario/uf.js"></script>
-        <script type="text/javascript" src="js/oferta/itens.js"></script>
+    <script type="text/javascript" src="js/Modelos.js"></script>
+    <!-- JSON Estados e Cidades-->
+    <script type="text/javascript" src="js/usuario/uf.js"></script>
+    <script type="text/javascript" src="js/oferta/itens.js"></script>
 
-        <!-- Configurações do F7 -->
-        <script type="text/javascript" src="js/my-app.js"></script>
-        <!-- JS personalizado-->
-        <script type="text/javascript" src="js/configuracoes.js"></script>
-        <script type="text/javascript" src="js/usuario/usuarioController.js"></script>
-        <script type="text/javascript" src="js/usuario/autenticacao.js"></script>
-        <script type="text/javascript" src="js/Localizacao.js"></script>
+    <!-- Configurações do F7 -->
+    <script type="text/javascript" src="js/my-app.js"></script>
+    <!-- JS personalizado-->
+    <script type="text/javascript" src="js/configuracoes.js"></script>
+    <script type="text/javascript" src="js/usuario/usuarioController.js"></script>
+    <script type="text/javascript" src="js/usuario/autenticacao.js"></script>
+    <script type="text/javascript" src="js/Localizacao.js"></script>
 
-        <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
-        <script type="text/javascript" src="js/oferta/novaOferta.js"></script>
+    <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
+    <script type="text/javascript" src="js/oferta/novaOferta.js"></script>
 
-        <script type="text/javascript" src="js/notificacoes.js"></script>
-        <script type="text/javascript" src="js/my-script.js"></script>
+    <script type="text/javascript" src="js/notificacoes.js"></script>
+    <script type="text/javascript" src="js/my-script.js"></script>
 
-        <script type="text/javascript" src="js/usuario/usuario.js"></script>
-        <script type="text/javascript" src="js/usuario/preferencias.js"></script>
+    <script type="text/javascript" src="js/usuario/usuario.js"></script>
+    <script type="text/javascript" src="js/usuario/preferencias.js"></script>
 
-        <script type="text/javascript" src="js/cordovaInit.js"></script>
+    <script type="text/javascript" src="js/cordovaInit.js"></script>
 </body>
 
 </html>
