--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="views/oferta/novaOferta.html" class="item-link item-content close-panel">
+                    <a href="views/oferta/ofertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Ofertas</div>
@@ -282,6 +282,7 @@
 
     <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
     <script type="text/javascript" src="js/oferta/novaOferta.js"></script>
+    <script type="text/javascript" src="js/oferta/ofertas.js"></script>
 
     <script type="text/javascript" src="js/notificacoes.js"></script>
     <script type="text/javascript" src="js/my-script.js"></script>
