--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -60,6 +60,15 @@
                     </a>
                 </li>
                 <li>
+                    <a href="views/oferta/minhasOfertas.html" class="item-link item-content close-panel">
+                        <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
+                        <div class="item-inner">
+                            <div class="item-title">Minhas ofertas</div>
+                            <div class="item-after"></div>
+                        </div>
+                    </a>
+                </li>
+                <li>
                     <a href="#" class="item-link item-content">
                         <div class="item-media"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
                         <div class="item-inner">
@@ -276,6 +285,7 @@
     <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
     <script type="text/javascript" src="js/oferta/novaOferta.js"></script>
     <script type="text/javascript" src="js/oferta/ofertas.js"></script>
+    <script type="text/javascript" src="js/oferta/minhasOfertas.js"></script>
 
     <script type="text/javascript" src="js/notificacoes.js"></script>
     <script type="text/javascript" src="js/my-script.js"></script>
