--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -42,7 +42,7 @@
         <div class="list-block">
             <ul>
                 <li>
-                    <a href="index.html" class="item-link item-content">
+                    <a href="index.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-home" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Início</div>
@@ -50,7 +50,7 @@
                         </div>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="views/oferta/ofertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
                         <div class="item-inner">
@@ -58,7 +58,7 @@
                             <div class="item-after"></div>
                         </div>
                     </a>
-                </li>
+                </li> -->
                 <li>
                     <a href="views/oferta/minhasOfertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
@@ -114,12 +114,12 @@
             <!-- Top Navbar-->
             <div class="navbar">
                 <div class="navbar-inner">
-                    <div class="left sliding">
+                    <!-- <div class="left sliding">
                         <a href="#" class="link">
                             <i class="icon icon-back"></i>
                             <span>Voltar</span>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="center sliding">HortApp</div>
                     <div class="right sliding">
                         <a href="#" data-panel="left" class="link open-panel">
@@ -136,10 +136,16 @@
                 <div data-page="index" class="page">
                     <div class="page-content">
                         <!-- Link to another page -->
-                        <div class="content-block">
+                        <!-- <div class="content-block">
                             <p id="conteudo"></p>
                             <p><a href="views/about/about.html">About app</a></p>
+                        </div> -->
+
+                        <div class="list-block media-list">
+                            <ul id="listaOfertas">
+                            </ul>
                         </div>
+
                     </div>
                 </div>
             </div>
