iniciando o infiniti scroll

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -50,7 +50,7 @@
                         </div>
                     </a>
                 </li>
-                <!-- <li>
+                <li>
                     <a href="views/oferta/ofertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
                         <div class="item-inner">
@@ -58,7 +58,7 @@
                             <div class="item-after"></div>
                         </div>
                     </a>
-                </li> -->
+                </li>
                 <li>
                     <a href="views/oferta/minhasOfertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
@@ -141,10 +141,10 @@
                             <p><a href="views/about/about.html">About app</a></p>
                         </div> -->
 
-                        <div class="list-block media-list">
+                        <!-- <div class="list-block media-list">
                             <ul id="listaOfertas">
                             </ul>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -226,8 +226,7 @@
     <script type="text/javascript" src="js/usuario/uf.js"></script>
     <script type="text/javascript" src="js/oferta/itens.js"></script>
 
-    <!-- Configurações do F7 -->
-    <script type="text/javascript" src="js/my-app.js"></script>
+
     <!-- JS personalizado-->
     <script type="text/javascript" src="js/configuracoes.js"></script>
     <script type="text/javascript" src="js/usuario/usuarioController.js"></script>
@@ -245,7 +244,11 @@
     <script type="text/javascript" src="js/usuario/usuario.js"></script>
     <script type="text/javascript" src="js/usuario/preferencias.js"></script>
 
+    <!-- Configurações do F7 -->
+    <script type="text/javascript" src="js/my-app.js"></script>
+    
     <script type="text/javascript" src="js/cordovaInit.js"></script>
+
 </body>
 
 </html>
