--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -42,7 +42,7 @@
         <div class="list-block">
             <ul>
                 <li>
-                    <a href="index.html" class="item-link item-content close-panel">
+                    <a href="views/oferta/ofertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-home" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Início</div>
@@ -50,7 +50,7 @@
                         </div>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="views/oferta/ofertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
                         <div class="item-inner">
@@ -58,7 +58,7 @@
                             <div class="item-after"></div>
                         </div>
                     </a>
-                </li>
+                </li> -->
                 <li>
                     <a href="views/oferta/minhasOfertas.html" class="item-link item-content close-panel">
                         <div class="item-media"><i class="fa fa-tags" aria-hidden="true"></i></div>
@@ -96,7 +96,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" id="btnSair" class="item-link item-content open-login-screen close-panel">
+                    <a href="#" id="btnSair" class="item-link item-content">
                         <div class="item-media"><i class="fa fa-power-off" aria-hidden="true"></i></div>
                         <div class="item-inner">
                             <div class="item-title">Sair</div>
@@ -135,17 +135,7 @@
             <div class="pages navbar-through toolbar-through">
                 <div data-page="index" class="page">
                     <div class="page-content">
-                        <!-- Link to another page -->
-                        <!-- <div class="content-block">
-                            <p id="conteudo"></p>
-                            <p><a href="views/about/about.html">About app</a></p>
-                        </div> -->
-
-                        <!-- <div class="list-block media-list">
-                            <ul id="listaOfertas">
-                            </ul>
-                        </div> -->
-
+                      <h1>AGUARDE O LOGIN...</h1>
                     </div>
                 </div>
             </div>
@@ -246,7 +236,7 @@
 
     <!-- Configurações do F7 -->
     <script type="text/javascript" src="js/my-app.js"></script>
-    
+
     <script type="text/javascript" src="js/cordovaInit.js"></script>
 
 </body>
