iniciando a visualização dos detalhes da oferta

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -135,7 +135,7 @@
             <div class="pages navbar-through toolbar-through">
                 <div data-page="index" class="page">
                     <div class="page-content">
-                      <h1>AGUARDE O LOGIN...</h1>
+                      <h2>AGUARDE O LOGIN...</h2>
                     </div>
                 </div>
             </div>
@@ -227,6 +227,7 @@
     <script type="text/javascript" src="js/oferta/novaOferta.js"></script>
     <script type="text/javascript" src="js/oferta/ofertas.js"></script>
     <script type="text/javascript" src="js/oferta/minhasOfertas.js"></script>
+    <script type="text/javascript" src="js/oferta/ofertaDetalhes.js"></script>
 
     <script type="text/javascript" src="js/notificacoes.js"></script>
     <script type="text/javascript" src="js/my-script.js"></script>
