--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -141,6 +141,69 @@
                             <p><a href="views/about/about.html">About app</a></p>
                         </div> -->
 
+
+                        
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">Header</div>
+                            <div class="card-content">
+                                <div class="card-content-inner">Card content</div>
+                            </div>
+                            <div class="card-footer">Footer</div>
+                        </div>
+
+
+
+
+
                         <div class="list-block media-list">
                             <ul id="listaOfertas">
                             </ul>
