--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -228,6 +228,7 @@
     <script type="text/javascript" src="js/oferta/ofertas.js"></script>
     <script type="text/javascript" src="js/oferta/minhasOfertas.js"></script>
     <script type="text/javascript" src="js/oferta/ofertaDetalhes.js"></script>
+    <script type="text/javascript" src="js/oferta/editarOferta.js"></script>
 
     <script type="text/javascript" src="js/notificacoes.js"></script>
     <script type="text/javascript" src="js/my-script.js"></script>
