--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -196,20 +196,27 @@
                     </div>
                     <div class="row content-block">
                         <div class="col-100">
-                            <a href="#" id="btnLogin" class="button button-big button-fill color-red animated fadeInUpBig"><i class="fa fa-google" aria-hidden="true"></i>&nbspLogin com Google</a> </div>
+                            <a href="#" id="btnLogin" class="button button-big button-fill color-red animated fadeInUpBig"><i class="fa fa-google" aria-hidden="true"></i>&nbsp Login com Google</a> </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-
-
     <script type="text/javascript" src="cordova.js"></script>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="bower_components/Framework7/dist/js/framework7.min.js"></script>
     <!-- JQuery-->
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+
+    <!-- JS personalizado-->
+    <script type="text/javascript" src="js/configuracoes.js"></script>
+
+    <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
+    <script type="text/javascript" src="js/oferta/ofertaDetalhes.js"></script>
+
+    <!-- Configurações do F7 -->
+    <script type="text/javascript" src="js/my-app.js"></script>
 
     <script type="text/javascript" src="js/Modelos.js"></script>
     <!-- JSON Estados e Cidades-->
@@ -218,25 +225,20 @@
 
 
     <!-- JS personalizado-->
-    <script type="text/javascript" src="js/configuracoes.js"></script>
     <script type="text/javascript" src="js/usuario/usuarioController.js"></script>
     <script type="text/javascript" src="js/usuario/autenticacao.js"></script>
     <script type="text/javascript" src="js/Localizacao.js"></script>
 
-    <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
+
     <script type="text/javascript" src="js/oferta/novaOferta.js"></script>
     <script type="text/javascript" src="js/oferta/ofertas.js"></script>
     <script type="text/javascript" src="js/oferta/minhasOfertas.js"></script>
-    <script type="text/javascript" src="js/oferta/ofertaDetalhes.js"></script>
 
     <script type="text/javascript" src="js/notificacoes.js"></script>
     <script type="text/javascript" src="js/my-script.js"></script>
 
     <script type="text/javascript" src="js/usuario/usuario.js"></script>
     <script type="text/javascript" src="js/usuario/preferencias.js"></script>
-
-    <!-- Configurações do F7 -->
-    <script type="text/javascript" src="js/my-app.js"></script>
 
     <script type="text/javascript" src="js/cordovaInit.js"></script>
 
