Mostrando endereço no mapa na tela de detalhes da oferta

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
     <!-- Animate.css https://github.com/daneden/animate.css -->
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+
 </head>
 
 <body class="theme-blue">
@@ -135,7 +136,7 @@
             <div class="pages navbar-through toolbar-through">
                 <div data-page="index" class="page">
                     <div class="page-content">
-                      <h2>AGUARDE O LOGIN...</h2>
+                        <h2>AGUARDE O LOGIN...</h2>
                     </div>
                 </div>
             </div>
@@ -204,6 +205,8 @@
     </div>
 
     <script type="text/javascript" src="cordova.js"></script>
+    <!-- JS Google Maps-->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0P239oFuH1QHiBM91-nmQo435XFcDKfs"></script>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="bower_components/Framework7/dist/js/framework7.min.js"></script>
     <!-- JQuery-->
