Realizados ajustes de layout

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -11,6 +11,7 @@
     <meta http-equiv="Content-Security-Policy" content="connect-src *;" />
     <!-- Your app title -->
     <title>HortApp</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/mateuszanini/projetochApp/master/hortapp/www/res/icon/android/drawable-xxxhdpi-icon.png?token=AT1UFS9LcuT2KPAMTsdZS3JqxkqERkmbks5YQF5UwA%3D%3D">
     <!-- Path to Framework7 iOS CSS theme styles-->
     <link rel="stylesheet" href="bower_components/Framework7/dist/css/framework7.ios.min.css">
     <!-- Path to Framework7 iOS related color styles -->
@@ -136,7 +137,10 @@
             <div class="pages navbar-through toolbar-through">
                 <div data-page="index" class="page">
                     <div class="page-content">
-                        <h2>AGUARDE O LOGIN...</h2>
+                      <div class="content-block text-center color-blue">
+                        <h1><i class="fa fa-lock" aria-hidden="true"></i></h1>
+                          <h2>AGUARDE O LOGIN</h2>
+                      </div>
                     </div>
                 </div>
             </div>
