Adicionado recurso para enviar mensagem quando uma reserva é efetuada

--- a/hortapp/www/index.html
+++ b/hortapp/www/index.html
@@ -218,6 +218,7 @@
     <script type="text/javascript" src="js/configuracoes.js"></script>
 
     <script type="text/javascript" src="js/oferta/ofertaController.js"></script>
+    <script type="text/javascript" src="js/oferta/reservar.js"></script>
     <script type="text/javascript" src="js/oferta/ofertaDetalhes.js"></script>
 
     <!-- Configurações do F7 -->
